mise à jour du projet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12048,9 +12048,9 @@ footer {
 
 header.masthead {
   position: relative;
-  margin-bottom: 3rem;
+  margin-bottom: 0.1em;
   padding-top: calc(8rem + 57px);
-  padding-bottom: 8rem;
+  padding-bottom: 0.1em;
   background: no-repeat center center;
   background-color: #6c757d;
   background-size: cover;
