--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,8 +1,10 @@
+/*****************Photo home*******************/
 .hero {
     border-radius: 50%;
     width: 200px;
 }
 
+/*****************Navbar User*******************/
 ul, li {
     list-style: none;
 }
@@ -19,6 +21,7 @@ ul, li {
     padding-bottom: 10px;
 }
 
+/*****************Post Content*******************/
 .menu {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -28,35 +31,49 @@ ul, li {
 .menu-content {
     display: flex;
     float: left;
-    box-shadow: 10px 5px 5px black;
+    /*box-shadow: 10px 5px 5px black;*/
     flex-direction: column;
     height: 100%;
-    margin: 0 auto;
     padding: 10px 10px 10px 10px;
     border: 1px solid black;
 }
 
 #post-content {
-    margin: 0 auto;
-    padding: 11px 30px 0 30px;
+    padding: 10px 10px 10px 10px;
+    height: 100%;
+    /*border: 1px solid black;*/
 }
 
-#post-content, form {
-    height: 100%;
+#post-content, .content-hero {
     display: flex;
+    margin: 0 auto;
     flex-direction: column;
 }
 
-#content, #content-post {
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-}
-
-#content-update, textarea {
-    height: 100%;
+.content-hero, .content-post {
     width: 100%;
 }
 
+.content-hero, #post {
+   height: 100%;
+   margin-bottom: 25px; 
+}
+
+/*****************Post Message*******************/
+#warning-conn {
+    background-color: orange;
+}
+
+#postmessage {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+#postmessage, #messagepost {
+    height: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 
