--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -47,19 +47,30 @@ h2 {
     padding-right: 15px;
     flex-direction: column;
     height: 100%;
-    margin-right: 20px;
+    margin: 0 auto;
 }
 
 #post-content {
+    
     padding: 10px 10px 10px 10px;
     height: 100%;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
         rgba(0, 0, 0, 0.07) 0px 2px 4px,
         rgba(0, 0, 0, 0.07) 0px 4px 8px,
         rgba(0, 0, 0, 0.07) 0px 8px 16px,
-        rgba(0, 0, 0, 0.07) 0px 16px 32px, 
+        rgba(0, 0, 0, 0.07) 0px 16px 32px,
         rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
+
+@media (max-width: 532px) {
+    #post-content,
+    .content-hero {
+      display: flex;
+      flex-direction: column;  
+    }
+    
+}
+
 
 #post-content,
 .content-hero {
@@ -107,5 +118,5 @@ h2 {
 #messagepost {
     height: 50%;
     margin-top: 10px;
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
 }
