--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 /*****************Photo home*******************/
 .hero {
@@ -19,6 +15,7 @@ li {
     padding-top: 15px;
     padding-bottom: 10px;
     margin-bottom: 40px;
+    width: 100%;
     box-shadow: 0 2px 2px 2px rgba(0, 0, 0, .2);
 }
 
@@ -51,7 +48,6 @@ h2 {
 }
 
 #post-content {
-    
     padding: 10px 10px 10px 10px;
     height: 100%;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
@@ -62,13 +58,27 @@ h2 {
         rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
-@media (max-width: 532px) {
+@media (max-width: 320px) {
+    .admin-bar {
+        width: 320px;
+    }
+
     #post-content,
     .content-hero {
       display: flex;
-      flex-direction: column;  
-    }
+      flex-direction: column;
+      margin-top: 20px; 
+      width: 100%; 
+    };
     
+    .menu-content {
+        display: flex;
+        width: 100%;
+    }
+
+    #postmessage, #messagepost {
+        width: 100%;
+    }
 }
 
 
